metadata/force-app/main/default/objects/CustomName_fNRgn__c/CustomName_fNRgn__c.object-meta.xml
<CustomObject>
    <description>Description_QSasy</description>
    <label>CustomLabel_BiIXb</label>
    <nameField>
        <label>CustomLabel_BiIXb</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_BiIXbs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>