metadata/force-app/main/default/objects/CustomName_fNRgn__c/fields/CustomField_MuMHM__c.field-meta.xml
<CustomField>
    <fullName>CustomField_MuMHM__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldiyRxt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>